# multi-robot-assembly-cell

./: LICENSE  README.md
config/codesys/: plc_config.yaml
config/ethercat/: network_config.yaml
config/robot/: r1_fanuc.yaml  r2_rokae.yaml  r3_rokae.yaml
docs/: process-flow.md  robot-coordination.md  safety-design.md  system-architecture.md
src/ethercat/: CMakeLists.txt  EthercatMaster.cpp  EthercatMaster.h  RobotSlaveDriver.cpp  RobotSlaveDriver.h  SafetyMonitor.cpp  SafetyMonitor.h  ScrewDriverController.cpp  ScrewDriverController.h  TurntableController.cpp  TurntableController.h  pybind_module.cpp
src/plc/: io_mapping.csv  main_sequence.st  safety_program.st
tools/analysis/: ScrewTighteningManager.py
tools/orchestration/: CellOrchestrator.py  MaterialHandler.py  RobotInterface.py  cell_types.py  system_config.py
tools/vision/: VisionSystem.py
